force-app/main/default/objects/OpportunityLog__c/OpportunityLog__c.object-meta.xml
<CustomObject>
    <description>Track Deletions and Change of Account. Used for updates to Service NOW</description>
    <label>OpportunityLog</label>
    <nameField>
        <displayFormat>OL-{00000}</displayFormat>
        <label>OpportunityLog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OpportunityLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>