force-app/main/default/objects/OpportunityLog__c/fields/New_AccountId__c.field-meta.xml
<CustomField>
    <fullName>New_AccountId__c</fullName>
    <label>New AccountId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>