force-app/main/default/objects/OpportunityLog__c/fields/Updated_in_ServiceNOW__c.field-meta.xml
<CustomField>
    <fullName>Updated_in_ServiceNOW__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Updated in ServiceNOW</label>
    <type>Checkbox</type>
</CustomField>