force-app/main/default/objects/OpportunityLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>OpportunityId__c</columns>
    <columns>Change_Type__c</columns>
    <columns>New_AccountId__c</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Updated_in_ServiceNOW__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>