force-app/main/default/objects/OpportunityLog__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Updated_in_ServiceNOW__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>